waitingList to queue